# nagare

./: .gitignore  Cargo.toml  README.md
benches/: evolvent_solve_bench.rs  hsikan_bench.rs  parity_gate.rs  phase_pool_bench.rs
docs/: HANDOFF-hsikan-gomb-soma.md  HANDOFF-signed-link-benchmark.md  SESSION-2026-07-07-summary.md  architecture.md  design-concentric-gomb-soma.md  extraction-notes.md  nagare-paper.tex  nagare-review.tex  nagare.tex  nagare_architecture.mmd  nature-like-venue-readiness.md
examples/: auroc_eval.rs  auto_holonomy_dissociation.rs  bias_discrimination.rs  cpml_signed_link.rs  cr_edge_encoder.rs  curvature_field_dissociation.rs  curvature_xor_gate2.rs  cv_bench.rs  cv_learned_field.rs  cv_live.rs  evolvent_bench.rs  evolvent_hypergraph.rs  evolvent_junction.rs  evolvent_multifrontal.rs  evolvent_stream.rs  evolvent_width.rs  forward_profile.rs  holonomy_deep_dissociation.rs  holonomy_dfa_dissociation.rs  hsikan_mem_bench.rs  mnist_cv.rs  neocognitron_aniso.rs  neocognitron_deep.rs  neocognitron_entropy.rs  neocognitron_rot.rs  noncommute_learned.rs  noncommute_specificity.rs  oriented_head_demo.rs  phase_pool_curve.rs  pose_backbone.rs  pose_loop.rs  pose_net.rs  pose_smoke.rs  pose_symmetry.rs  pytorch_bench.rs  rotor_spike_tuning.rs  sbsh_detector_demo.rs  sbsh_tree_smoke.rs  scaling_bench.rs  signed_link.rs  (+1 more)
fixtures/: moons_spiral_xor_seed53.txt
reports/: 2026-07-02-fitted-projection-gate-holonomy-ablation-rss.json  2026-07-02-fitted-projection-gate-holonomy-ablation.json  2026-07-02-fitted-projection-gate-holonomy-ablation.md  (+108 more)
(+359 files in other folders)
