[package]
name = "nagare-holonomy-learn"
version = "0.1.0"
edition = "2021"
description = "Experimental local holonomy learning with projection-gated global pooling."
license = "MIT OR Apache-2.0"
repository = "https://github.com/kyberszittya/nagare"

[lib]
name = "holonomy_learn"
path = "src/lib.rs"

[dependencies]
# Vendored for standalone builds (detached from the framework workspace).
# Upstream: hymeko_framework_rust/{hymeko_clifford,hymeko_graph} (2026-07-06).
hymeko_clifford = { path = "vendor/hymeko_clifford" }
hymeko_graph = { path = "vendor/hymeko_graph" }
rand = "=0.9.2"
rayon = "1.10"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[example]]
name = "toy_compare"
path = "examples/toy_compare.rs"

[[bench]]
name = "parity_gate"
harness = false
